fix(Footer): remove text-align property

--- a/src/pages/HomePage/Footer/Footer.module.scss
+++ b/src/pages/HomePage/Footer/Footer.module.scss
@@ -18,7 +18,6 @@
     .information {
       display: flex;
       flex-direction: column;
-      text-align: justify;
       justify-content: space-between;
       gap: 0.5rem;
 
